# caches

./: .clang-format  .clang_complete  .gitignore  .travis.yml  404.html  CMakeLists.txt  LICENSE.md  README.md  annotated.html  appveyor.yml  cache_8hpp.html  cache_8hpp__incl.map  cache_8hpp__incl.md5  cache_8hpp_source.html  cache__policy_8hpp.html  cache__policy_8hpp__dep__incl.map  cache__policy_8hpp__incl.dot  cache__policy_8hpp__incl.map  cache__policy_8hpp__incl.md5  cache__policy_8hpp_source.html  classcaches_1_1FIFOCachePolicy-members.html  classcaches_1_1FIFOCachePolicy.html  classcaches_1_1FIFOCachePolicy__coll__graph.dot  classcaches_1_1FIFOCachePolicy__inherit__graph.md5  classcaches_1_1ICachePolicy-members.html  classcaches_1_1ICachePolicy.html  classcaches_1_1ICachePolicy__inherit__graph.md5  classcaches_1_1LFUCachePolicy-members.html  classcaches_1_1LFUCachePolicy.html  classcaches_1_1LFUCachePolicy__inherit__graph.dot  classcaches_1_1LFUCachePolicy__inherit__graph.map  classcaches_1_1LRUCachePolicy-members.html  classcaches_1_1LRUCachePolicy.html  classcaches_1_1NoCachePolicy-members.html  classcaches_1_1NoCachePolicy.html  classcaches_1_1fixed__sized__cache-members.html  classcaches_1_1fixed__sized__cache.html  classes.html  conanfile.py  dir_d44c64559bbebec7f509842c48db8b23.html  (+26 more)
.github/: FUNDING.yml
.github/workflows/: ci.yml  documentation.yml
LICENSE/: index.html
api/cache/fixed_sized_cache/: index.html
api/policy/cache_policy_interface/: index.html
api/policy/fifo_cache_policy/: index.html
api/policy/lfu_cache_policy/: index.html
api/policy/lru_cache_policy/: index.html
api/policy/no_cache_policy/: index.html
cmake/: Doxygen.in  caches-config.cmake.in  index.md.in  pkg-config.pc.in
docs/: Doxygen  Pipfile
docs/doxy/: config.json
docs/doxygen/: Doxyfile  index.md
docs/mkdocs/: Pipfile  mkdocs.yml  pyproject.toml
docs/mkdocs/docs/: LICENSE.md  hooks.py  index.md
docs/mkdocs/docs/api/: key_traits.md  wrapper_policy.md
docs/mkdocs/docs/api/cache/: cache.md  fixed_sized_cache.md
docs/mkdocs/docs/api/policy/: cache_policy_interface.md  fifo.md  fifo_cache_policy.md  lfu.md  lfu_cache_policy.md  lru.md  lru_cache_policy.md  no_cache_policy.md  no_eviction.md  policy_interface.md
doxygen/: annotated.html  cache_8hpp.html  cache_8hpp__incl.dot  cache_8hpp__incl.map  cache_8hpp__incl.md5  cache_8hpp_source.html  cache__policy_8hpp.html  cache__policy_8hpp__dep__incl.dot  cache__policy_8hpp__dep__incl.map  cache__policy_8hpp__dep__incl.md5  cache__policy_8hpp__incl.map  cache__policy_8hpp__incl.md5  cache__policy_8hpp_source.html  classcaches_1_1FIFOCachePolicy-members.html  classcaches_1_1FIFOCachePolicy.html  classcaches_1_1FIFOCachePolicy__coll__graph.map  classcaches_1_1FIFOCachePolicy__coll__graph.md5  classcaches_1_1FIFOCachePolicy__inherit__graph.map  classcaches_1_1ICachePolicy-members.html  classcaches_1_1ICachePolicy.html  classcaches_1_1ICachePolicy__inherit__graph.dot  classcaches_1_1ICachePolicy__inherit__graph.map  classcaches_1_1ICachePolicy__inherit__graph.md5  classcaches_1_1LFUCachePolicy-members.html  classcaches_1_1LFUCachePolicy.html  classcaches_1_1LFUCachePolicy__coll__graph.map  classcaches_1_1LFUCachePolicy__inherit__graph.md5  classcaches_1_1LRUCachePolicy-members.html  classcaches_1_1LRUCachePolicy.html  classcaches_1_1LRUCachePolicy__coll__graph.map  classcaches_1_1LRUCachePolicy__inherit__graph.dot  classcaches_1_1LRUCachePolicy__inherit__graph.md5  classcaches_1_1NoCachePolicy-members.html  classcaches_1_1NoCachePolicy.html  classcaches_1_1NoCachePolicy__coll__graph.md5  classcaches_1_1NoCachePolicy__inherit__graph.dot  classcaches_1_1NoCachePolicy__inherit__graph.map  classcaches_1_1NoCachePolicy__inherit__graph.md5  classcaches_1_1fixed__sized__cache-members.html  classcaches_1_1fixed__sized__cache.html  (+29 more)
doxygen/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js
include/: cache.hpp  cache_policy.hpp  fifo_cache.hpp  fifo_cache_policy.hpp  lfu_cache.hpp  lfu_cache_policy.hpp  lru_cache.hpp  lru_cache_policy.hpp
include/caches/: caches.hpp  fifo_cache_policy.hpp  key_traits.hpp  lfu_cache_policy.hpp  lru_cache_policy.hpp  wrapper_policy.hpp
include/caches/core/: cache.hpp
include/caches/policies/: fifo.hpp  lfu.hpp  lru.hpp  no_eviction.hpp  policy_interface.hpp
search/: all_1.js  all_3.js  all_5.js  all_6.js  all_8.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  pages_0.js  search_index.json
test/: CMakeLists.txt  fifo_cache_tests.cpp  fifo_tests.cpp  general_tests.cpp  lfu_cache_tests.cpp  lfu_tests.cpp  lru_cache_tests.cpp  lru_tests.cpp  no_eviction_tests.cpp  nopolicy_cache_tests.cpp  test_helper.hpp  typed_backends.hpp  wrapper_policy_tests.cpp
