[project]
name = "caches-mkdocs"
version = "0.0.5"
description = "Caches library documentation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Vladimir Petrigo", email = "vladimir.petrigo@gmail.com" }]
dependencies = [
  "mkdocs>=1.4.2",
  "mkdocs-material>=9.0.7",
  "mkdocs-simple-hooks>=0.1.5",
  "mkdocs-exclude>=1.0.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
